# cmake-imported-soname

./: CMakeLists.txt  README.md  add.lib
